--- a/boxmodel.htm
+++ b/boxmodel.htm
@@ -6,29 +6,73 @@
     <title>Document</title>
     <style>
     .para1{
-        border: 2px solid black;
+        border: 12px double black;
         padding: 10px;
         margin: 20px;
     }
 
     .div{
-        border: 2px solid black;
+        border: 12px inset black;
+        padding: 10px 15px 10px 15px;
+        background-color:skyblue;
+        border-radius: 2px;
+
+    }
+
+     .div1{
+        border: 12px groove rgb(40, 18, 163);
+        padding: 10px 15px 10px 15px;
+        background-color:skyblue;
+        border-radius: 2px;
+
+    }
+
+    .div2{
+        border: 12px dotted rgb(235, 198, 17);
+        padding: 10px 15px 10px 15px;
+        background-color:skyblue;
+        border-radius: 2px;
+
+    }
+
+    .div3{
+        border: 12px ridge rgb(219, 20, 156);
         padding: 10px 15px 10px 15px;
         background-color:skyblue;
         border-radius: 2px;
 
     }
     h1{
-        text-shadow: 2px 6px 2px rgba(218,18,18,0.88);
+        text-shadow: 2px 6px 2px rgb(165, 6, 6);
     
+    }
+    body{
+        border: 12px  outset red;
+        padding: 10px;
+        margin: 30px;
     }
     </style>
 </head>
 <body>
-    <h1>i am header</h1>
+    <h1>i am header(outset)</h1>
     <p class="para1">hello everyone</p>
     <div class="div">
-        <h1>i am heading </h1>
+        <h1>i am heading(inset) </h1>
+        <p>drwdetydiskajgfweytshgd waefdytwgDUKQWJAKD EWYEGDI WBUDWEGYUDQWGE WEUYGEUQWYHDUIAH WYTSEUQWHIU YUTWUIDY QWYETGUWHDOIKBAEWUGUI</p>
+    </div>
+    <br/><br/>
+    <div class="div1">
+        <h1>i am heading(dotted) </h1>
+        <p>drwdetydiskajgfweytshgd waefdytwgDUKQWJAKD EWYEGDI WBUDWEGYUDQWGE WEUYGEUQWYHDUIAH WYTSEUQWHIU YUTWUIDY QWYETGUWHDOIKBAEWUGUI</p>
+    </div>
+    <br/><br/>
+    <div class="div3">
+        <h1>i am heading (ridge)</h1>
+        <p>drwdetydiskajgfweytshgd waefdytwgDUKQWJAKD EWYEGDI WBUDWEGYUDQWGE WEUYGEUQWYHDUIAH WYTSEUQWHIU YUTWUIDY QWYETGUWHDOIKBAEWUGUI</p>
+    </div>
+    <br/><br/>
+    <div class="div2">
+        <h1>i am heading(grove) </h1>
         <p>drwdetydiskajgfweytshgd waefdytwgDUKQWJAKD EWYEGDI WBUDWEGYUDQWGE WEUYGEUQWYHDUIAH WYTSEUQWHIU YUTWUIDY QWYETGUWHDOIKBAEWUGUI</p>
     </div>
 </body>
